4.Test-Deployment-Ingress/1.Deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clock
spec:
  replicas: 3
  selector:
    matchLabels:
      name: clock
  template:
    metadata:
      name: clock
      labels:
        name: clock
    spec:
      containers:
        - name: clock
          image: gilangvperdana/apps:clock
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: clock-service
spec:
  selector:
    name: clock
  ports:
    - port: 80
      targetPort: 80
