4.Test-Deployment-Ingress/2.Deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bubble
spec:
  replicas: 3
  selector:
    matchLabels:
      name: bubble
  template:
    metadata:
      name: bubble
      labels:
        name: bubble
    spec:
      containers:
        - name: bubble
          image: gilangvperdana/apps:bubble
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: bubble-service
spec:
  selector:
    name: bubble
  ports:
    - port: 80
      targetPort: 80
