4.Test-Deployment-Ingress/3.Deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
spec:
  replicas: 3
  selector:
    matchLabels:
      name: calculator
  template:
    metadata:
      name: calculator
      labels:
        name: calculator
    spec:
      containers:
        - name: calculator
          image: gilangvperdana/apps:calculator
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  selector:
    name: calculator
  ports:
    - port: 80
      targetPort: 80
